@@ -171,7 +171,7 @@ IF (_compile_ret)
   MESSAGE (STATUS "AVCodecID supported." )
   REMOVE_DEFINITIONS (-DFF_OLD_CODEC_ID)
 ELSE (_compile_ret)
-  MESSAGE (WARNING "AVCodecID not Supported using old ABI" )
+  MESSAGE (STATUS "AVCodecID not Supported using old ABI" )
   ADD_DEFINITIONS (-DFF_OLD_CODEC_ID)
 ENDIF (_compile_ret)
 ENDMACRO (FFMPEG_ABI_ENUM_CHECK)
